fix: better contrast between variation name and component

--- a/src/styles/_viewer.scss
+++ b/src/styles/_viewer.scss
@@ -31,7 +31,7 @@
 
   &__item-container {
     padding-top: $padding;
-    border-top: 1px solid $background;
+    border-top: 1px solid $grey;
     margin: $padding/2 0 ($padding / 2) 0;
   }
 
